Added filtering by title or genre.

--- a/Pages/Movies/Index.cshtml
+++ b/Pages/Movies/Index.cshtml
@@ -1,4 +1,4 @@
-@page
+@page 
 @model RazorPagesMovie.Pages.Movies.IndexModel
 
 @{
@@ -6,6 +6,15 @@
 }
 
 <h1>Index</h1>
+<form>
+    <p>
+        <select asp-for="GenreFilter" asp-items="Model.Genres">
+            <option value="">All</option>
+        </select>
+    Title: <input type="text" asp-for="TitleFilter" />
+    <input type="submit" value="Filter" />
+    </p>
+</form>
 
 <p>
     <a asp-page="Create">Create New</a>
